--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -5,6 +5,19 @@ body {
 	width: @desktop;
 	margin: 0 auto;
 	padding: 0px;
+	// for sticky footer
+	display: flex;
+  	min-height: 100vh;
+  	flex-direction: column;
+}
+.flex{
+	margin: initial;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	align-content: center;
+	flex-wrap: wrap;
+	flex: 1;
 }
 .overlay {
 	width: 100%;
