--- a/app/templates/confirm-email.handlebars
+++ b/app/templates/confirm-email.handlebars
@@ -17,14 +17,8 @@
 <body>
 	<div class="container">
 		{{>main-header}}
-		{{>jumbatron}}
-		{{>features}}
-		{{>overviews}}
+		{{>column}}
 		{{>main-footer}}
-	</div>
-	<div class="overlay"></div>
-	<div class="popup-holder">
-		{{>popup title="Thank you for signing up!" message="Please check your email to confirm your email address." }}
 	</div>
 	<script src="js/plugins.min.js"></script>
 	<script src="js/app.js?v={{timestamp}}"></script>
