--- a/app/templates/partials/input.handlebars
+++ b/app/templates/partials/input.handlebars
@@ -1,1 +1,1 @@
-<input type="{{type}}" class="input" placeholder="{{placeholder}}">
+<input type="{{type}}" class="input {{modifier}}" placeholder="{{placeholder}}">
