--- a/app/templates/partials/jumbatron.handlebars
+++ b/app/templates/partials/jumbatron.handlebars
@@ -8,6 +8,6 @@
 			We’re moving storgage to a better place. Launching this fall, register
 			now for early access and a chance to win a year of free storage.
 		</p>
-		{{>form}}
+		{{>form inputs=inputsLanding buttonText="Register for Beta" }}
 	</div>
 </div>
