--- a/app/templates/share-space.handlebars
+++ b/app/templates/share-space.handlebars
@@ -17,14 +17,11 @@
 <body>
 	<div class="container">
 		{{>main-header}}
-		{{>jumbatron}}
-		{{>features}}
-		{{>overviews}}
+		<div class="flex">
+			<a href="#" class="button">Go to AppStore</a>
+			<button class="button" type="button">Open Storgage</button>
+		</div>
 		{{>main-footer}}
-	</div>
-	<div class="overlay"></div>
-	<div class="popup-holder">
-		{{>popup title="Thank you for signing up!" message="Please check your email to confirm your email address." }}
 	</div>
 	<script src="js/plugins.min.js"></script>
 	<script src="js/app.js?v={{timestamp}}"></script>
