Added word break on the documentation page.

--- a/app/less/documentation.less
+++ b/app/less/documentation.less
@@ -12,6 +12,8 @@
 	&__text {
 		.openSans;
 		font-size: 20px;
+		overflow-wrap: break-word;
+		word-wrap: break-word;
 	}
 	&__text_centred {
 		text-align: center;
